Fixed incorrect height on mobile browsers such as when displayed with headerbars on mobile browsers

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 html,
 body {
   height: 100vh;
+  height: 100dvh;
   box-sizing: border-box;
 }
 
